Ensure colour contrast is accessible

--- a/src/styles/constants.module.css
+++ b/src/styles/constants.module.css
@@ -2,7 +2,7 @@
     --default-primary-brown: #98473E;
     --default-primary-grey: #747474;
     --default-secondary-grey: #AAAAAA;
-    --default-primary-beige: #EFD09E;
+    --default-primary-beige: #F5D5A2;
     --default-primary-white: #FFFFFF;
     --default-line-height: 1.5;
     --default-border-radius: 0.5rem;
